<resources>
    <string name="app_name">Rollout</string>
    <string name="action_search">Search</string>
    <string name="action_idle">Idle</string>
    <string name="action_ride">Ride</string>
    <string name="action_silence">Silence</string>
    <string name="pref_title_empty_threshold">Empty threshold</string>
    <string name="pref_summary_empty_threshold">        The number of available bikes left to treat a station as "empty"</string>
    <string name="pref_title_full_threshold">Full threshold</string>
    <string name="pref_summary_full_threshold">        The number of available docks left to treat a station as "full"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="pref_title_enable_vibration">Enable vibration</string>
    <string name="pref_summary_enable_vibration">During riding, vibration patterns will accompany notifications</string>
    <string name="pref_title_home_set">Activate Home destination</string>
    <string name="pref_summary_home_set">Include "Home" as a destination for rides</string>
    <string name="pref_title_destination_home_latitude">Latitude of Home in degrees</string>
    <string name="pref_title_destination_home_longitude">Longitude of Home in degrees</string>
    <string name="pref_title_work_set">Activate Work destination</string>
    <string name="pref_summary_work_set">Include "Work" as a destination for rides</string>
    <string name="pref_title_destination_work_latitude">Latitude of Work in degrees</string>
    <string name="pref_title_destination_work_longitude">Longitude of Work in degrees</string>
    <string name="disclaimer_title">Terms of use</string>
    <string name="disclaimer_agree">Agree</string>
    <string name="disclaimer_decline">Decline</string>
    <string name="disclaimer_content_html"><![CDATA[
        <p>
            <b>Use this application at your own risk.</b>
        </p>
        <p>
            By choosing &quot;Agree&quot;, you confirm that you have read these terms and that you
            assume all risk of using this application.
        </p>
        <p>
            This application is a beta version, with known bugs and missing functionality. It is a
            hobby project built for personal purposes, but shared in case others find it useful.
        </p>
        <p>
            Riding a bike is dangerous. Adding distractions makes it more so. While the goal of this
            application is to make one&apos;s commute more efficient, you must avoid using it unless
            you are certain that conditions permit you to safely do so.
        </p>
        <p>
            The bike share data displayed in this application are relayed from a public feed that is
            not owned or maintained by the author(s) of this application. The author(s) thus do not
            make any warranties about the completeness, reliability, or accuracy of these data. Any
            action you take based on these data is strictly at your own risk.
        </p>
        <p>
            Any problems with the data should be reported appropriately to the owner(s) of the bike
            share service.
        </p>
    ]]></string>
    <string name="open_source_notice_title">Open source notice</string>
    <string name="open_source_notice_ok">OK</string>
</resources>