<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 Jason M. Heim
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_enable_vibration"
        android:title="@string/pref_title_enable_vibration"
        android:summary="@string/pref_summary_enable_vibration"
        android:defaultValue="false"
        />
    <EditTextPreference
        android:key="pref_empty_threshold"
        android:title="@string/pref_title_empty_threshold"
        android:dialogTitle="@string/pref_title_empty_threshold"
        android:dialogMessage="@string/pref_summary_empty_threshold"
        android:defaultValue="0"
        android:dialogIcon="@drawable/ic_fill_1_bw_24p"
        android:inputType="number"
        android:selectAllOnFocus="true"
        />
    <EditTextPreference
        android:key="pref_full_threshold"
        android:title="@string/pref_title_full_threshold"
        android:dialogTitle="@string/pref_title_full_threshold"
        android:dialogMessage="@string/pref_summary_full_threshold"
        android:defaultValue="0"
        android:dialogIcon="@drawable/ic_fill_7_color_48dp"
        android:inputType="number"
        android:selectAllOnFocus="true"
        />
    <CheckBoxPreference
        android:key="pref_destination_home_set"
        android:title="@string/pref_title_home_set"
        android:summary="@string/pref_summary_home_set"
        android:defaultValue="false"
        />
    <EditTextPreference
        android:key="pref_destination_home_latitude"
        android:title="@string/pref_title_destination_home_latitude"
        android:dialogTitle="@string/pref_title_destination_home_latitude"
        android:defaultValue=""
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:dependency="pref_destination_home_set"
        />
    <EditTextPreference
        android:key="pref_destination_home_longitude"
        android:title="@string/pref_title_destination_home_longitude"
        android:dialogTitle="@string/pref_title_destination_home_longitude"
        android:defaultValue=""
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:dependency="pref_destination_home_set"
        />
    <CheckBoxPreference
        android:key="pref_destination_work_set"
        android:title="@string/pref_title_work_set"
        android:summary="@string/pref_summary_work_set"
        android:defaultValue="false"
        />
    <EditTextPreference
        android:key="pref_destination_work_latitude"
        android:title="@string/pref_title_destination_work_latitude"
        android:dialogTitle="@string/pref_title_destination_work_latitude"
        android:defaultValue=""
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:dependency="pref_destination_work_set"
        />
    <EditTextPreference
        android:key="pref_destination_work_longitude"
        android:title="@string/pref_title_destination_work_longitude"
        android:dialogTitle="@string/pref_title_destination_work_longitude"
        android:defaultValue=""
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:dependency="pref_destination_work_set"
        />
</PreferenceScreen>