<!--
  ~ Copyright (C) 2014 Jason M. Heim
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Locations" >
    <item android:id="@+id/set_action_search"
          android:title="@string/action_search"
          android:orderInCategory="100"
          android:icon="@drawable/ic_search_white_36dp"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/set_action_ride"
          android:title="@string/action_ride"
          android:orderInCategory="200"
          android:icon="@drawable/ic_directions_bike_white_36dp"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/set_action_idle"
          android:title="@string/action_idle"
          android:orderInCategory="300"
          android:icon="@drawable/ic_pause_white_36dp"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/set_action_silence"
          android:title="@string/action_silence"
          android:orderInCategory="400"
          android:icon="@drawable/ic_volume_off_white_36dp"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_open_settings"
          android:title="@string/settings"
          android:orderInCategory="500"
          android:showAsAction="never" />
    <item android:id="@+id/menu_open_open_source_notices"
          android:title="@string/open_source_notice_title"
          android:orderInCategory="600"
          android:showAsAction="never" />
</menu>
